# osool

./: .env  .gitignore  Cargo.toml
migrations/2021-05-15-071005_create_employees/: up.sql
migrations/2021-05-16-062416_create_reserve/: up.sql
src/: error_handler.rs  main.rs  schema.rs
src/employee/: mod.rs  model.rs  route.rs
src/reserve/: mod.rs  model.rs  route.rs
