[package]
name = "actix-hello"
version = "0.1.0"
authors = ["ahmad98 <ahmadmansooripv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }



